# cyclic-iterator

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/idv/: cyclic_iterator.h
tests/: CMakeLists.txt  main.cpp
